changed link journal/mindweb to essay/mindweb (4)

--- a/public/journal/index.html
+++ b/public/journal/index.html
@@ -369,7 +369,7 @@
         </header>
         <hr>
         <section>
-            <ul class=posts>
+            <hr class=journal>
                 <li itemprop=blogPost itemscope itemtype=https://schema.org/BlogPosting><a
                     href=/wie_mindweb_computing_alles_veraendern_wird/ title="Kein Trottel sein, reich werden!"
                         itemprop="name url">Kein Trottel sein, reich werden!</a>
